footer menu gap fix
footer menu gap fix

--- a/assets/css/layouts/_footer.scss
+++ b/assets/css/layouts/_footer.scss
@@ -124,3 +124,7 @@
   background-color: #4375E7;
   transition: .3s;
 }
+
+.footer-menu-item {
+	padding: 6px 0px;
+}
